bug (14675) - IE UI Issues  bug (14676) - IE || Critical || All Popup should be Screen Centered and Text Inside should be wrapped.

--- a/web/src/scss/_home.scss
+++ b/web/src/scss/_home.scss
@@ -513,6 +513,8 @@
             right: -84px;
             left: auto;
             top: 37px !important;
+            height: 500px;
+            overflow-y: auto;
             @include smScreen {
                 right: -30px;
             }
